--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,29 @@
-beautifulsoup4==4.9.1
-certifi==2020.6.20
+backports.shutil-get-terminal-size==1.0.0
+certifi==2017.7.27.1
 chardet==3.0.4
-click==7.1.2
-cycler==0.10.0
-Flask==1.1.2
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-kiwisolver==1.2.0
-labelImg==1.8.3
-lxml==4.5.2
-MarkupSafe==1.1.1
-matplotlib==3.3.1
-numpy==1.19.1
-opencv-python==4.4.0.42
-pandas==1.1.2
-Pillow==7.2.0
-pyparsing==2.4.7
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-python-dateutil==2.8.1
-pytz==2020.1
-requests==2.24.0
-scipy==1.5.2
-selenium==3.141.0
+click==6.7
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.4.1
+Flask==1.0.2
+gunicorn==19.9.0
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+Markdown==2.6.11
+MarkupSafe==1.1
+mccabe==0.6.1
+nose==1.3.7
+numpy==1.15.0
+pathlib==1.0.1
+pew==1.1.0
+pipenv==8.2.7
+pycodestyle==2.3.1
+pyflakes==1.5.0
+requests==2.18.4
+shutilwhich==1.1.0
+urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+Werkzeug==0.14.1
 Shapely==1.7.1
-six==1.15.0
-soupsieve==2.0.1
-urllib3==1.25.10
-Werkzeug==1.0.1
